# SyncMaster

./: .gitignore  .pylintrc  CodeOfConduct.md  DEPLOYMENT.md  INSTALL.md  README.md  amplify.yml  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: admin-portal-frontend-checks.yaml  backend-checks.yaml  contractor-portal-frontend-checks.yaml  deploy-backend.yaml  deploy-frontend.yaml  frontend-checks.yaml  latex-linter.yaml
docs/: Common.tex  README.md
docs/Design/: README.md
docs/Design/SoftArchitecture/: MG.tex  README.md
docs/Design/SoftDetailedDes/: MIS.tex  README.md
docs/DevelopmentPlan/: DevelopmentPlan.tex  README.md
docs/Extras/: README.md
docs/Extras/UsabilityTesting/: README.md
docs/Extras/UserManual/: README.md
docs/HazardAnalysis/: HazardAnalysis.tex  README.md
docs/Presentations/D0_ProofOfConceptDemo/: README.md
docs/Presentations/D1_Rev0Demo/: README.md
docs/Presentations/D2_FinalPresentation/: README.md
docs/ProblemStatementAndGoals/: ProblemStatement.tex  README.md
docs/ReflectAndTrace/: README.md  ReflectAndTrace.tex
docs/SRS-Volere/: README.md  SRS.tex
docs/VnVPlan/: README.md  VnVPlan.tex
docs/VnVReport/: README.md  VnVReport.tex
docs/projMngmnt/: Final_Team_Contrib.tex  POC_Team_Contrib.tex  Rev0_Team_Contrib.tex
infrastructure/: README.md  backend.yaml  frontend.yaml
refs/: README.md  References.bib
scripts/: README.md
scripts/backend/: README.md  build.sh  deploy.sh  run_formatters.sh  run_linters.sh  run_tests.sh
scripts/frontend/: README.md  deploy.sh
src/: README.md
src/backend/: environment.py  handler.py
src/backend/database/: db_table.py
src/backend/file_storage/: s3_bucket.py
src/backend/models/db/: db_base.py  job.py
src/backend/routes/: temp.py
src/backend/service/: environment.py  exceptions.py  handler.py  util.py
src/backend/service/database/: db_table.py
src/backend/service/document_management/: document_management.py
src/backend/service/file_storage/: s3_bucket.py
src/backend/service/location_verification/: location_verification.py
src/backend/service/models/: custom_base_model.py
src/backend/service/models/api/: document.py  file_attachment.py  site.py  site_visit.py  user_requests.py
src/backend/service/models/db/: db_base.py  document.py  site.py  site_visit.py  user_request.py
src/backend/service/routes/: documents.py  site_visits.py  temp.py  users.py
src/backend/service/site_management/: site_management.py
src/backend/service/site_visits/: site_visits.py
src/backend/service/user_authentication/: user_authentication.py
src/backend/service/user_requests/: user_requests.py
src/client-admin-portal/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
src/client-admin-portal/src/: theme.ts
src/client-admin-portal/src/app/: layout.tsx  page.tsx
src/client-admin-portal/src/components/: SignInComponent.tsx  datastruct.json  nonNavLogoComponent.tsx
src/client-admin-portal/src/contexts/: AuthWrapper.tsx  DocumentTreeContext.tsx
src/client-admin-portal/src/pages/: _app.tsx  _document.tsx  login.tsx  reset-password.tsx  sign-up.tsx
src/client-admin-portal/src/services/: getSiteVisits.tsx  userService.tsx
src/client-admin-portal/src/state/: store.ts
src/client-admin-portal/src/utils/: convertToState.ts  test2.ts  userHelpers.ts
src/client-contractor-portal/: envConfig.ts  eslint.config.mjs  package-lock.json  package.json
src/client-contractor-portal/src/: theme.ts
src/client-contractor-portal/src/contexts/: AuthWrapper.tsx  DocumentTreeContext.tsx
src/client-contractor-portal/src/hooks/: useAuth.tsx
src/client-contractor-portal/src/pages/: _app.tsx  acknowledgement.tsx  dashboard.tsx  documents.tsx  index.tsx  jobs.tsx  login.tsx  reset-password.tsx  visitended.tsx
src/client-contractor-portal/src/services/: authService.tsx  documentService.tsx  siteService.tsx
src/client-contractor-portal/src/state/: store.ts
src/client-contractor-portal/src/utils/: getLocation.ts  siteHelpers.ts  userHelpers.ts
src/poc-server/: package-lock.json  package.json
src/poc/client/poc-client/: package-lock.json  package.json
src/poc/server/poc-server/: README.md  package-lock.json  package.json
src/poc/server/poc-server/src/: index.ts
test/: README.md
test/backend/unit/: conftest.py  constants.py  test_handler.py  test_util.py
test/backend/unit/database/: test_db_table.py
test/backend/unit/document_management/: test_document_management.py
test/backend/unit/file_storage/: test_s3_bucket.py
test/backend/unit/fixtures/: api_gateway_event_v1.py  cognito.py  config.py  database.py  dynamodb.py  s3.py
test/backend/unit/location_verification/: test_location_verification.py
test/backend/unit/routes/: test_document_management.py  test_site_management.py  test_site_visits.py  test_temp.py  test_user_requests.py  test_users.py
test/backend/unit/site_management/: test_site_management.py
test/backend/unit/site_visits/: test_site_visits.py
test/backend/unit/user_authentication/: test_user_authentication.py
test/backend/unit/user_requests/: test_user_requests.py
(+98 files in other folders)
