[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools==3.4.0",
    "boto3==1.35.90",
    "botocore==1.35.90",
    "pydantic==2.10.4",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "cfn-lint==1.22.2",
    "moto==5.0.25",
    "pylint==3.3.3",
    "pytest==8.3.4",
    "pytest-env==1.1.5",
    "pytest-socket==0.7.0",
    "ruff==0.8.4",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--disable-socket -vv"
testpaths = "test/backend/unit"
env = [
    "LOG_LEVEL=DEBUG"
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 80
